fixed overlap mobile borders

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,11 @@
-body {
+body, html {
   padding: 0;
   margin: 0;
   /*font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;*/
   font-family: 'PT Sans Caption', sans-serif;
   font-size: 14px;
   background-color: #2A363B;
+  width: 100%;
 }
 a {
   color: black;
@@ -35,7 +36,7 @@ button {
 .navBar {
   /*background-color: #FECEA8;*/
   background-color: #FF847C;
-  padding: 10px;
+  /*padding: 10px;*/
   width: 100%;
   height: 70px;
   margin: 0;
@@ -47,10 +48,6 @@ button {
   font-family: 'PT Sans Caption', sans-serif;
   font-size: 50px;
 }
-.navBar img {
-  /*align-self: flex-start;*/
-  /*opacity: .5;*/
-}
 #searchGlass {
   opacity: .3;
   align-self: center;
@@ -61,7 +58,6 @@ button {
   /*background: white;*/
   /*background-image: url("../images/marta-logo.jpg");*/
   background-image: url("../images/marta-logo-dark.png");
-
   align-self: flex-start;
   display: flex;
   justify-content: center;
@@ -102,15 +98,8 @@ button {
 
 }
 
-.navBar p, h4, a {
-  /*display: inline;*/
-  /*margin: 0;*/
-}
 .navBar h2 {
   display: inline-block;
-  /*width: 100px;*/
-  /*padding: 0;*/
-  /*margin: 0 auto;*/
   text-align: center;
 }
 .left{
@@ -123,20 +112,16 @@ button {
 }
 
 .right{
-  /*text-align: right;*/
   float: right;
   margin-right: 20px;
 }
 
 .favorites {
-  /*background-color: #00BBE5;*/
-  /*background-color: #FF847C;*/
   background-color: #99B898;
   color: #2A363B;
   margin: 0;
-  padding-right: 10px;
+  /*padding-right: 10px;*/
   width: 100%;
-  /*max-height: 70px;*/
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -224,13 +209,10 @@ button {
 }
 
 .search {
-  /*top:50px;*/
   width: 80%;
   margin: 0 auto;
   /*border-radius: 20px;*/
   background: white;
-  /*background: black;*/
-  border: 1px solid gray;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -292,7 +274,6 @@ input[type=password]{
 }
 .ticker p {
   display: block;
-  /*font-family: "dotty";*/
   margin: 0;
   font-size: 1.4em;
   /*font-size: 40px;*/
@@ -333,6 +314,7 @@ select {
     .search {
         width: 100%;
         /*height: 30px;*/
+        padding: 0;
     }
     .search input {
       /*height: 30px;*/
@@ -376,16 +358,11 @@ select {
       top: -30px;
       text-align: right;
     }
-    /*.links a {
-      display: inline-block;
-      text-align: right;
+    .links a {
+     color: #2A363B;
+    }
+}
 
-    }*/
-}
-@font-face {
-  font-family: 'dotty';
-  /*src: url('../images/dotty.ttf') format('truetype');*/
-}
 .tracks {
   position: fixed;
   margin: 0 auto;
